Transforms from CSV and indexes by bulk to an ES instance

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 2218
 application:
   version: @project.version@
+pam:
+  elasticsearch:
+    url: ${STILLINGESBACKEND_URL:https://pamsok-elasticsearch.nais.oera-q.local}
 spring:
   datasource:
     jndi-name: java:/jdbc/adDB
