--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
     </modules>
 
     <properties>
-
+        <elasticsearch.version>6.0.1</elasticsearch.version>
+        <guava.version>20.0</guava.version>
     </properties>
 
     <distributionManagement>
@@ -38,24 +39,14 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.oracle</groupId>
-                <artifactId>ojdbc6</artifactId>
-                <version>11.2.0.2.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.json</groupId>
-                <artifactId>json</artifactId>
-                <version>20140107</version>
-            </dependency>
-            <dependency>
-                <groupId>com.squareup.okhttp3</groupId>
-                <artifactId>okhttp</artifactId>
-                <version>3.9.0</version>
+                <groupId>org.elasticsearch.client</groupId>
+                <artifactId>elasticsearch-rest-high-level-client</artifactId>
+                <version>${elasticsearch.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>20.0</version>
+                <version>${guava.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.tomakehurst</groupId>
