PAM-683: Added (test) configuration for Hoved- and Underenhet synchronization. Actual environment variables might need to be renamed once we configure deploy.

--- a/app/src/test/resources/application.yml
+++ b/app/src/test/resources/application.yml
@@ -31,3 +31,11 @@ http:
   proxy:
     enabled: true
     url: http://155.55.60.117:8088
+
+enhetsregister:
+  timeout:
+    millis: ${PAM_ER_SYNC.ENHETSREGISTER.TIMEOUT:1000}
+  hovedenhet:
+    url:  ${PAM_ER_SYNC.ENHETSREGISTER.HOVEDENHET.URL:"http://localhost/this/configuration/is/intended/to/fail"}
+  underenhet:
+    url: ${PAM_ER_SYNC.ENHETSREGISTER.UNDERENHET.URL:"http://localhost/this/configuration/is/intended/to/fail"}
