--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -35,3 +35,11 @@ http:
   proxy:
     enabled: true
     url: http://155.55.60.117:8088
+
+enhetsregister:
+  timeout:
+    millis: ${PAM_ER_SYNC.ENHETSREGISTER.TIMEOUT:10000}
+  hovedenhet:
+    url:  ${PAM_ER_SYNC.ENHETSREGISTER.HOVEDENHET.URL:"http://data.brreg.no/enhetsregisteret/download/enheter"}
+  underenhet:
+    url: ${PAM_ER_SYNC.ENHETSREGISTER.UNDERENHET.URL:"http://data.brreg.no/enhetsregisteret/download/underenheter"}
