--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     <properties>
         <elasticsearch.version>6.2.4</elasticsearch.version>
         <guava.version>20.0</guava.version>
+        <rest-assured.version>3.0.7</rest-assured.version>
+        <hamcrest-library.version>1.3</hamcrest-library.version>
     </properties>
 
     <distributionManagement>
@@ -48,6 +50,18 @@
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.rest-assured</groupId>
+                <artifactId>rest-assured</artifactId>
+                <version>${rest-assured.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-library</artifactId>
+                <version>${hamcrest-library.version}</version>
+                <scope>test</scope>
+            </dependency>
 
             <!--TODO: REMOVE-->
             <dependency>
@@ -60,9 +74,9 @@
     </dependencyManagement>
 
     <!--<scm>-->
-        <!--<connection>scm:git:ssh://git@stash.devillo.no:7999/pam/pam-index.git</connection>-->
-        <!--<developerConnection>scm:git:ssh://git@stash.devillo.no:7999/pam/pam-index.git</developerConnection>-->
-        <!--<tag>HEAD</tag>-->
+    <!--<connection>scm:git:ssh://git@stash.devillo.no:7999/pam/pam-index.git</connection>-->
+    <!--<developerConnection>scm:git:ssh://git@stash.devillo.no:7999/pam/pam-index.git</developerConnection>-->
+    <!--<tag>HEAD</tag>-->
     <!--</scm>-->
 
 </project>
