PAM-683: Added EnhetsregisterBatchControllerTest, with custom configuration to "download" files from local files. PAM-683: Overriding IndexerService bean with a mocked implementation for test purposes.

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -3,8 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>no.nav.pam.ad</groupId>
+    
     <artifactId>pam-er-sync-app</artifactId>
     <packaging>jar</packaging>
 
@@ -80,6 +79,15 @@
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
         </dependency>
     </dependencies>
 
