PAM-683: Added cron configurable job scheduler. PAM-683: Moved timeoutMillis handling into JobLauncherService, where it's actually used.

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -37,6 +37,7 @@ http:
     url: http://155.55.60.117:8088
 
 enhetsregister:
+  cron: ${PAM_ER_SYNC.ENHETSREGISTER.CRON:0 0 0 * * *}
   timeout:
     millis: ${PAM_ER_SYNC.ENHETSREGISTER.TIMEOUT:10000}
   hovedenhet:
