PAM-683: Merged in latest changes from master.

--- a/app/src/test/resources/application.yml
+++ b/app/src/test/resources/application.yml
@@ -5,7 +5,7 @@ config:
     allowCredentials: true
 pam:
   elasticsearch:
-    url: http://localhost:2218/
+    url: http://localhost:2218
     usemock: false
 spring:
   datasource:
