--- a/app/src/test/resources/application.yml
+++ b/app/src/test/resources/application.yml
@@ -31,3 +31,12 @@ http:
   proxy:
     enabled: true
     url: http://155.55.60.117:8088
+
+# Management endpoints for NAIS.
+management:
+  endpoints:
+    enabled-by-default: false
+  metrics:
+      enable:
+        jvm: false
+        process: false
