--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,10 @@
     <properties>
         <elasticsearch.version>6.2.4</elasticsearch.version>
         <guava.version>20.0</guava.version>
-        <micrometer-registry-prometheus.version>1.0.1</micrometer-registry-prometheus.version>
+        <shedlock.version>0.14.0</shedlock.version>
+        <micrometer.version>1.0.1</micrometer.version>
         <prometheus.version>0.3.0</prometheus.version>
-        <logstash-logback-encoder.version>5.1</logstash-logback-encoder.version>
+        <logstash.version>5.1</logstash.version>
     </properties>
 
     <distributionManagement>
@@ -52,17 +53,18 @@
                 <version>${guava.version}</version>
             </dependency>
 
+            <!-- ShedLock -->
             <dependency>
                 <groupId>net.javacrumbs.shedlock</groupId>
                 <artifactId>shedlock-core</artifactId>
-                <version>0.14.0</version>
+                <version>${shedlock.version}</version>
             </dependency>
 
             <!-- Micrometer/Prometheus -->
             <dependency>
                 <groupId>io.micrometer</groupId>
                 <artifactId>micrometer-registry-prometheus</artifactId>
-                <version>${micrometer-registry-prometheus.version}</version>
+                <version>${micrometer.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.prometheus</groupId>
@@ -74,15 +76,9 @@
             <dependency>
                 <groupId>net.logstash.logback</groupId>
                 <artifactId>logstash-logback-encoder</artifactId>
-                <version>${logstash-logback-encoder.version}</version>
+                <version>${logstash.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <!--<scm>-->
-    <!--<connection>scm:git:ssh://git@stash.devillo.no:7999/pam/pam-index.git</connection>-->
-    <!--<developerConnection>scm:git:ssh://git@stash.devillo.no:7999/pam/pam-index.git</developerConnection>-->
-    <!--<tag>HEAD</tag>-->
-    <!--</scm>-->
 
 </project>
