Restructured configuration and modified proxy configuration.

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -2,9 +2,6 @@ server:
   port: ${server.port:9012}
 application:
   version: @project.version@
-pam:
-  elasticsearch:
-    url: ${pam.elasticsearch.url:https://pamsok-elasticsearch.nais.oera-q.local}
 spring:
   datasource:
     url: jdbc:h2:mem:testdb;Mode=Oracle
@@ -29,26 +26,27 @@ spring:
     job:
       enabled: false
     initialize-schema: always
-
-# HTTP proxy, see HttpConfig class.
 http:
   proxy:
-    enabled: true
-    url: ${http.proxy.enabled:http://155.55.60.117:8088}
+    url: ${http.proxy.url:http://155.55.60.117:8088}
 
-enhetsregister:
-  scheduler:
-    enabled: ${enhetsregister.scheduler.enabled:true}
-    cron: ${enhetsregister.scheduler.cron:0 0 0 * * *}
-  sources:
-    timeout:
-      millis: ${enhetsregister.sources.timeout.millis:25000}
-    hovedenhet:
-      enabled: ${enhetsregister.sources.hovedenhet.enabled:false}
-      url:  ${enhetsregister.sources.hovedenhet.url:http://data.brreg.no/enhetsregisteret/download/enheter}
-    underenhet:
-      enabled: ${enhetsregister.sources.underenhet.enabled:true}
-      url: ${enhetsregister.sources.underenhet.url:http://data.brreg.no/enhetsregisteret/download/underenheter}
+# PAM specific.
+pam:
+  elasticsearch:
+    url: ${pam.elasticsearch.url:https://pamsok-elasticsearch.nais.oera-q.local}
+  enhetsregister:
+    scheduler:
+      enabled: ${enhetsregister.scheduler.enabled:true}
+      cron: ${enhetsregister.scheduler.cron:0 0 0 * * *}
+    sources:
+      timeout:
+        millis: ${enhetsregister.sources.timeout.millis:25000}
+      hovedenhet:
+        enabled: ${enhetsregister.sources.hovedenhet.enabled:false}
+        url:  ${enhetsregister.sources.hovedenhet.url:http://data.brreg.no/enhetsregisteret/download/enheter}
+      underenhet:
+        enabled: ${enhetsregister.sources.underenhet.enabled:true}
+        url: ${enhetsregister.sources.underenhet.url:http://data.brreg.no/enhetsregisteret/download/underenheter}
 
 # Management endpoints for NAIS.
 management:
