--- a/nais.yaml
+++ b/nais.yaml
@@ -24,5 +24,5 @@ resources:
       memory: 500Mi
 fasitResources:
   used:
-  - alias: "pam-er-sync.properties"
+  - alias: "application.properties"
     resourceType: ApplicationProperties
