--- a/app/src/test/resources/application.yml
+++ b/app/src/test/resources/application.yml
@@ -27,7 +27,7 @@ pam:
       proxy:
         url: http://155.55.60.117:8088
   elasticsearch:
-    url: http://localhost:2218
+    url:  https://pamsok-elasticsearch.nais.oera-q.local
     usemock: false
 
 # Management endpoints for NAIS.
