--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
-  port: 9012
+  port: ${server.port:9012}
+application:
+  version: @project.version@
 spring:
   datasource:
     url: jdbc:h2:mem:testdb;Mode=Oracle
@@ -19,7 +21,7 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       ddl-auto: none
   profiles:
-    active: test
+    active: prod
   batch:
     job:
       enabled: false # disabled batch startup, we are using scheduler
@@ -28,22 +30,22 @@ spring:
 pam:
   http:
       proxy:
-        url: http://webproxy-nais.nav.no:8088
+        url: ${PAM_NAIS_DRIFTPROXY_URL:http://webproxy-nais.nav.no:8088}
   elasticsearch:
-    url: localhost:9012
+    url: ${STILLINGESBACKEND_URL:https://pamsok-elasticsearch.nais.oera-q.local}
   enhetsregister:
     scheduler:
-      enabled: false
-      cron: 0 0 0 * * *
+      enabled: ${pam.enhetsregister.scheduler.enabled:false}
+      cron: ${pam.enhetsregister.scheduler.cron:0 0 0 * * *}
     sources:
       timeout:
-        millis: 25000
+        millis: ${pam.enhetsregister.sources.timeout.millis:25000}
       hovedenhet:
-        enabled: false
-        url:  http://data.brreg.no/enhetsregisteret/download/enheter
+        enabled: ${pam.enhetsregister.sources.hovedenhet.enabled:false}
+        url:  ${pam.enhetsregister.sources.hovedenhet.url:http://data.brreg.no/enhetsregisteret/download/enheter}
       underenhet:
-        enabled: true
-        url: http://data.brreg.no/enhetsregisteret/download/underenheter
+        enabled: ${pam.enhetsregister.sources.underenhet.enabled:true}
+        url: ${pam.enhetsregister.sources.underenhet.url:http://data.brreg.no/enhetsregisteret/download/underenheter}
 
 # Management endpoints for NAIS.
 management:
