--- a/app/src/test/resources/application.yml
+++ b/app/src/test/resources/application.yml
@@ -5,11 +5,11 @@ config:
     allowCredentials: true
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;Mode=Oracle
+    url: jdbc:h2:mem:testdb;Mode=PostgreSQL
     platform: h2
     continue-on-error: true
   jpa:
-    database-platform: org.hibernate.dialect.Oracle10gDialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: create-drop
     properties:
@@ -21,6 +21,8 @@ spring:
     job:
       enabled: false
     initialize-schema: always
+  main:
+    allow-bean-definition-overriding: true
 
 pam:
   http:
