[FIX] disable postgres use_jdbc_metadata_defaults

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -11,11 +11,13 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
       hibernate:
-       cache:
+        cache:
           use_second_level_cache: true
           use_query_cache: true
           region:
             factory_class:  org.hibernate.cache.ehcache.EhCacheRegionFactory
+        temp:
+          use_jdbc_metadata_defaults: false
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
