--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,23 +31,23 @@ spring:
 
 pam:
   http:
-      proxy:
-        url: ${PAM_NAIS_DRIFTPROXY_URL:http://webproxy-nais.nav.no:8088}
+    proxy:
+      url: ${PAM_NAIS_DRIFTPROXY_URL:http://webproxy-nais.nav.no:8088}
   elasticsearch:
     url: ${STILLINGESBACKEND_URL:https://pamsok-elasticsearch.nais.oera-q.local}
   enhetsregister:
     scheduler:
-      enabled: ${pam.enhetsregister.scheduler.enabled:false}
-      cron: ${pam.enhetsregister.scheduler.cron:0 0 0 * * *}
+      enabled: true
+      cron: 0 0 0 * * *
     sources:
       timeout:
-        millis: ${pam.enhetsregister.sources.timeout.millis:300000}
+        millis: 300000
       hovedenhet:
-        enabled: ${pam.enhetsregister.sources.hovedenhet.enabled:false}
-        url:  ${pam.enhetsregister.sources.hovedenhet.url:https://data.brreg.no/enhetsregisteret/download/enheter}
+        enabled: false
+        url:  https://data.brreg.no/enhetsregisteret/download/enheter
       underenhet:
-        enabled: ${pam.enhetsregister.sources.underenhet.enabled:true}
-        url: ${pam.enhetsregister.sources.underenhet.url:https://data.brreg.no/enhetsregisteret/download/underenheter}
+        enabled: true
+        url: https://data.brreg.no/enhetsregisteret/download/underenheter
 
 # Management endpoints for NAIS.
 management:
@@ -58,12 +58,12 @@ management:
       exposure:
         include: health, info, prometheus
   endpoint:
-      prometheus:
-        enabled: true
-      health:
-        enabled: true
-      info:
-        enabled: true
+    prometheus:
+      enabled: true
+    health:
+      enabled: true
+    info:
+      enabled: true
   metrics:
     enable:
       jvm:
