Allow to disable proxy and override ES URL for local dev config

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -28,8 +28,9 @@ pam:
   http:
       proxy:
         url: http://155.55.60.117:8088
+        enabled: true
   elasticsearch:
-    url:  https://pamsok-elasticsearch.nais.oera-q.local
+    url:  ${STILLINGESBACKEND_URL:https://pamsok-elasticsearch.nais.oera-q.local}
     usemock: false
 
 # Management endpoints for NAIS.
