--- a/naiserator.yml
+++ b/naiserator.yml
@@ -2,7 +2,7 @@ apiVersion: "nais.io/v1alpha1"
 kind: "Application"
 metadata:
   name: pam-er-sync
-  namespace: default
+  namespace: teampam
   labels:
     team: teampam
 spec:
@@ -27,7 +27,7 @@ spec:
       memory: 256Mi
   vault:
     enabled: false
-  webproxy: true
+  webproxy: false
   prometheus:
     enabled: true
     path: /actuator/prometheus
