GH workflows: trigger deploy on master push to directory dev-underenheter/**

--- a/.github/workflows/deploy-dev-underenheter.yml
+++ b/.github/workflows/deploy-dev-underenheter.yml
@@ -4,7 +4,7 @@ on:
     paths:
       - dev-underenheter/**
     branches:
-      - dev-underenheter
+      - master
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
