--- a/dev-underenheter/naisjob.yml
+++ b/dev-underenheter/naisjob.yml
@@ -7,7 +7,7 @@ metadata:
   namespace: teampam
 spec:
   image: {{ image }}
-  schedule: "30 3 * * *"
+  schedule: "30 2 * * *" # GMT
   activeDeadlineSeconds: 60
 
   env:
