[PAM-5170] Re-enable scheduler
Upstream data source issue is fixed for now.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,7 +38,7 @@ pam:
     url: ${STILLINGESBACKEND_URL:https://pamsok-elasticsearch.nais.oera-q.local}
   enhetsregister:
     scheduler:
-      enabled: false
+      enabled: true
       cron: 0 0 3 * * *
     sources:
       timeout:
