--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -12,29 +12,20 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v2
         with:
-          java-version: '12.x'
-      - uses: actions/cache@v1
+          fetch-depth: 0
+      - uses: actions/setup-java@v2
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          distribution: 'zulu'
+          java-version: '12'
+          cache: 'maven'
       - name: build and test
         run: mvn clean install
       - name: pre-deploy
-        uses: navikt/pam-deploy/actions/pre-deploy@v1
+        uses: navikt/pam-deploy/actions/pre-deploy@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: build and push docker image
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker build . --pull -t $IMAGE
-          echo "$GITHUB_TOKEN" | docker login --username "$GITHUB_REPOSITORY" --password-stdin docker.pkg.github.com
-          docker push $IMAGE
       - name: deploy to dev-gcp
         uses: nais/deploy/actions/deploy@v1
         env:
@@ -43,7 +34,7 @@ jobs:
           RESOURCE: naiserator.yml
           VARS: naiserator-dev.json
       - name: post-deploy
-        uses: navikt/pam-deploy/actions/post-deploy@v1
+        uses: navikt/pam-deploy/actions/post-deploy@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: draft release
