--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -10,10 +10,11 @@ on:
       - master
 jobs:
   call-workflow:
-    uses: navikt/pam-deploy/.github/workflows/deploy-prod.yml@v2
+    uses: navikt/pam-deploy/.github/workflows/deploy-dev.yml@v2
     with:
-      NAIS_RESOURCE: naiserator.yml
       JAVA_VERSION: 12
       BUILD_CACHE: maven
     secrets:
       NAIS_DEPLOY_APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
