--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,24 +4,7 @@ application:
   version: @project.version@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;Mode=PostgreSQL
-    platform: h2
-    continue-on-error: true
-  jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    properties:
-      hibernate:
-        cache:
-          use_second_level_cache: true
-          use_query_cache: true
-          region:
-            factory_class:  org.hibernate.cache.ehcache.EhCacheRegionFactory
-        temp:
-          use_jdbc_metadata_defaults: false
-    hibernate:
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      ddl-auto: none
+    url: jdbc:h2:mem:testdb
   profiles:
     active: prod
   batch:
@@ -29,7 +12,6 @@ spring:
       enabled: false # disabled batch startup, we are using scheduler
     jdbc:
       initialize-schema: always
-
 pam:
   http:
     proxy:
