readwrite can not delete

--- a/naiserator.yml
+++ b/naiserator.yml
@@ -29,7 +29,7 @@ spec:
     enabled: true
     path: /actuator/prometheus
   openSearch:
-    access: readwrite
+    access: admin
     instance: stilling
   accessPolicy:
     outbound:
