--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,16 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.6</version>
+        <version>3.1.1</version>
     </parent>
 
     <properties>
-        <java.version>12</java.version>
+        <java.version>17</java.version>
         <elasticsearch.version>7.10.0</elasticsearch.version>
         <guava.version>28.0-jre</guava.version>
-        <prometheus.version>0.3.0</prometheus.version>
-        <logstash.version>6.1</logstash.version>
-        <rest-assured.version>4.0.0</rest-assured.version>
+        <prometheus.version>0.16.0</prometheus.version>
+        <logstash.version>7.3</logstash.version>
+        <rest-assured.version>5.3.0</rest-assured.version>
         <hamcrest-library.version>1.3</hamcrest-library.version>
     </properties>
 
@@ -71,10 +71,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -105,6 +105,12 @@
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
             <version>${logstash.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
