--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,6 +63,7 @@ management:
       process:
         start:
           time: false
-    export:
-      prometheus:
+  prometheus:
+    metrics:
+      export:
         enabled: true
