--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -8,14 +8,22 @@ on:
       - "CODEOWNERS"
     branches:
       - master
+      - feature/**
 jobs:
   call-workflow:
-    uses: navikt/pam-deploy/.github/workflows/deploy-dev.yml@v2
+    uses: navikt/pam-deploy/.github/workflows/deploy-dev.yml@v5
+    permissions:
+      actions: read
+      contents: write
+      security-events: write
+      id-token: write
     with:
-      JAVA_VERSION: 12
+      JAVA_VERSION: 17
       BUILD_CACHE: maven
-      SNYK_ENABLED: true
+      CODEQL_ENABLED: true
+      SKIP_DRAFT_RELEASE: ${{ github.ref_name != 'master' }}
     secrets:
       NAIS_DEPLOY_APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      NAIS_WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
 
