V5 deploy-prod-skript

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   call-workflow:
-    uses: navikt/pam-deploy/.github/workflows/deploy-prod.yml@v2
+    uses: navikt/pam-deploy/.github/workflows/deploy-prod.yml@v5
+    with:
+      NAIS_RESOURCE: naiserator.yml
     secrets:
       NAIS_DEPLOY_APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
