--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -5,8 +5,9 @@ on:
 
 jobs:
   call-workflow:
-    uses: navikt/pam-deploy/.github/workflows/deploy-prod.yml@v5
+    uses: navikt/pam-deploy/.github/workflows/deploy-prod.yml@v6
+    permissions:
+      contents: write
+      id-token: write
     with:
       NAIS_RESOURCE: naiserator.yml
-    secrets:
-      NAIS_DEPLOY_APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
