--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <elasticsearch.version>7.10.0</elasticsearch.version>
+        <opensearch.version>2.11.1</opensearch.version>
         <guava.version>28.0-jre</guava.version>
         <prometheus.version>0.16.0</prometheus.version>
         <logstash.version>7.3</logstash.version>
@@ -52,9 +52,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.elasticsearch.client</groupId>
-            <artifactId>elasticsearch-rest-high-level-client</artifactId>
-            <version>${elasticsearch.version}</version>
+            <groupId>org.opensearch.client</groupId>
+            <artifactId>opensearch-rest-high-level-client</artifactId>
+            <version>${opensearch.version}</version>
         </dependency>
 
         <dependency>
@@ -66,6 +66,10 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
