--- a/naiserator.yml
+++ b/naiserator.yml
@@ -28,6 +28,11 @@ spec:
   prometheus:
     enabled: true
     path: /actuator/prometheus
+  observability:
+    logging:
+      destinations:
+        - id: loki
+        - id: elastic
   openSearch:
     access: admin
     instance: stilling
