Prøver å deploye naisjob-en på feature-branch

--- a/.github/workflows/deploy-dev-underenheter.yml
+++ b/.github/workflows/deploy-dev-underenheter.yml
@@ -5,6 +5,7 @@ on:
       - dev-underenheter/**
     branches:
       - master
+      - feature/**
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
