--- a/.github/workflows/deploy-dev-underenheter.yml
+++ b/.github/workflows/deploy-dev-underenheter.yml
@@ -8,6 +8,11 @@ on:
       - feature/**
 jobs:
   build-and-deploy:
+    permissions:
+      actions: read
+      contents: write
+      security-events: write
+      id-token: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
