Trigge ny deploy

--- a/.github/workflows/deploy-dev-underenheter.yml
+++ b/.github/workflows/deploy-dev-underenheter.yml
@@ -3,16 +3,14 @@ on:
   push:
     paths:
       - dev-underenheter/**
+      - .github/workflows/deploy-dev-underenheter.yml
     branches:
       - master
       - feature/**
 jobs:
   build-and-deploy:
     permissions:
-      actions: read
-      contents: write
-      security-events: write
-      id-token: write
+      packages: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
