Legg til intern ingress
Slik at vi ved behov kan trigge en ny synk vha et REST-kall

--- a/naiserator.yml
+++ b/naiserator.yml
@@ -33,6 +33,10 @@ spec:
       destinations:
         - id: loki
         - id: elastic
+  ingresses:
+  {{#each ingress as |url|}}
+     - {{url}}
+  {{/each}}
   openSearch:
     access: admin
     instance: stilling
