--- a/dev-underenheter/Dockerfile
+++ b/dev-underenheter/Dockerfile
@@ -3,8 +3,8 @@ FROM bash:5
 RUN apk add --no-cache curl
 RUN apk add --no-cache jq
 
-COPY data/*.json /data/
+COPY dev-underenheter/data/*.json /data/
 
-COPY job.sh /job.sh
+COPY dev-underenheter/job.sh /job.sh
 RUN chmod +x /job.sh
 ENTRYPOINT ["/job.sh"]
