Kjør jobben én gang kl 07:00
Ikke hvert minutt mellom 07:00 og 07:59

--- a/dev-underenheter/naisjob.yml
+++ b/dev-underenheter/naisjob.yml
@@ -7,7 +7,7 @@ metadata:
   namespace: teampam
 spec:
   image: {{ image }}
-  schedule: "* 7 * * *" # GMT
+  schedule: "0 7 * * *" # GMT
   activeDeadlineSeconds: 60
 
   env:
